2002-06-10  Sam Steingold  <sds@gnu.org>

	* makemake.in: when running CLISP, pass "-E UTF-8" instead of
	"-Efile UTF-8" for the sake of "make check" on badly localized
	machines (ascii terminals make UNICODE warnings into errors)

2002-06-10  Sam Steingold  <sds@gnu.org>

	user can now control the exit code better
	* lispbibl.d, spvw.d (final_exitcode): int, not bool (spvw.d
	and win32aux.d already assign it non-bool values)
	* control.d (%EXIT): errorp maybe a positive fixnum, in which
	case we can use its value for final_exitcode

2002-06-10  Sam Steingold  <sds@gnu.org>

	* erramiga.d: do not use /* ENGLISH */ to mark
	gettext catalog messages

2002-06-07  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/configure.in: work with autoconf-2.53
	(GB_CHECK): removed

2002-06-07  Sam Steingold  <sds@gnu.org>

	do not distribute autoconf with CLISP
	* Makefile.devel (EXCLUDE): exclude the po/tmp and autoconf cache
	(AUTOCONF_VERSION): new exported variable
	(AUTOCONF, AUTOCONF_CACHE): new variables
	(AUTOCONF_FILES): removed autoconf.m4f
	(*/configure): use $(AUTOCONF)
	(check-configures): remove $(AUTOCONF_CACHE)
	(potfiles): cleanup
	* ffcall/Makefile.devel (AUTOCONF_VERSION, AUTOCONF): new variables
	(AUTOCONF_FILES): removed autoconf.m4f
	(*/configure): use $(AUTOCONF)
	* libcharset/Makefile.devel, sigsegv/Makefile.devel:
	(AUTOCONF_VERSION, AUTOCONF): new variables
	(*/configure): use $(AUTOCONF)
	* ffcall/autoconf/autoconf, ffcall/autoconf/autoconf.m4f,
	* sigsegv/autoconf/autoconf, sigsegv/autoconf/autoconf.m4f,
	* src/autoconf/autoconf, src/autoconf/autoconf.m4f: removed

2002-06-06  Peter Burwood  <clisp@peterb.org.uk>

	* stdint.h.in (NEED_SIGNED_INT_TYPES): New define.
	(int8_t) [NEED_SIGNED_INT_TYPES]: Declare type only when needed.
	(int16_t, int32_t, int64_t): Likewise.

2002-06-05  Bruno Haible  <bruno@clisp.org>

	* lispbibl.d (DYNAMIC_STRING) [UNICODE]: Use Rectype_S32string, not
	Rectype_S8string.

2002-06-05  Sam Steingold  <sds@gnu.org>
